// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthenticatedContainer rendering should render without error 1`] = `
<div
  className="authenticated-container"
>
  <nav
    className="nav"
  >
    <div
      className="logo"
    >
      NoteBook2
    </div>
  </nav>
  <div
    className="book-list"
  >
    <h2>
      NoteBooks
    </h2>
    <div
      className="form fieldset new-book-form"
    >
      <form>
        <div
          className="form-group"
        >
          <input
            className="input-name"
            id="name"
            name="name"
            onChange={[Function]}
            placeholder="Name"
            type="text"
            value=""
          />
        </div>
        <div
          className="form-group"
        >
          <input
            className="button"
            disabled={false}
            id="submit"
            name="submit"
            onClick={[Function]}
            type="submit"
            value="Submit"
          />
        </div>
      </form>
    </div>
    <div
      className="book-cards"
    />
  </div>
</div>
`;

exports[`AuthenticatedContainer with a currrentBook set should render the BookView 1`] = `
<div
  className="authenticated-container"
>
  <nav
    className="nav"
  >
    <div
      className="logo"
    >
      NoteBook2
    </div>
  </nav>
  <div
    className="book-view"
  >
    <h2>
      Foo
    </h2>
    <div
      className="book-view"
    >
      BookView
    </div>
  </div>
</div>
`;

exports[`AuthenticatedContainer without a currrentBook set should render the BookList 1`] = `
<div
  className="authenticated-container"
>
  <nav
    className="nav"
  >
    <div
      className="logo"
    >
      NoteBook2
    </div>
  </nav>
  <div
    className="book-list"
  >
    <h2>
      NoteBooks
    </h2>
    <div
      className="form fieldset new-book-form"
    >
      <form>
        <div
          className="form-group"
        >
          <input
            className="input-name"
            id="name"
            name="name"
            onChange={[Function]}
            placeholder="Name"
            type="text"
            value=""
          />
        </div>
        <div
          className="form-group"
        >
          <input
            className="button"
            disabled={false}
            id="submit"
            name="submit"
            onClick={[Function]}
            type="submit"
            value="Submit"
          />
        </div>
      </form>
    </div>
    <div
      className="book-cards"
    >
      <div
        className="book-listing"
        onClick={[Function]}
      >
        <div
          className="book-name"
        >
          Foo
        </div>
      </div>
    </div>
  </div>
</div>
`;
